# roperator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
docs/: contributors-guide.md  index.md  intro.md
docs/_layouts/: default.html
docs/guide/: advanced-client-configuration.md  handler-sync.md  index.md  operator-config.md  parent.md  project-setup.md  running.md  upgrade_guide.md
docs/reference/: advanced-client-configuration.md  failable-handlers.md  gke-dev-auth.md  index.md  labels-and-tracking.md  serialization.md
examples/echo-server/: README.md  crd.yaml  example.yaml  main.rs  run-gke.sh
examples/temp-namespace/: README.md  crd.yaml  example.yaml  main.rs
src/: config.rs  error.rs  handler.rs  k8s_types.rs  lib.rs  resource.rs
src/config/: kubeconfig.rs
src/config/test-data/: dummy-ca.crt  kubeconfig-with-ca-file.yaml
src/handler/: failable.rs  request.rs
src/resource/: json_ext.rs  object_id.rs
src/runner/: client.rs  compare.rs  controller.rs  informer.rs  metrics.rs  mod.rs  request.rs  resource_map.rs  server.rs  update.rs
src/runner/client/: mod.rs  request.rs
src/runner/reconcile/: compare.rs  finalize.rs  mod.rs  sync.rs
src/runner/testkit/: mod.rs
tests/: README.md  integration_tests.rs
tests/resources/: testchild_one_crd.yaml  testchild_two_crd.yaml  testparent_crd.yaml
