[package]
name = "roperator"
version = "0.1.0"
authors = ["pfried <philipsfried@gmail.com>"]
edition = "2018"
description = "Easily create Kubernetes Operators with Rust"
repository = "https://github.com/psFried/roperator"
readme = "README.md"
keywords = ["kubernetes", "k8s", "operator"]
categories = ["api-bindings", "config"]
license = "MIT"

[dependencies]
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"]}
http = "^0.1.15"
tokio = "0.2.0-alpha.6"
tokio-executor = "0.2.0-alpha.6"
bytes = "0.4.12"
hyper-openssl = "=0.8.0-alpha.4"
futures-util-preview = "=0.3.0-alpha.19"
openssl = "^0.10.19"
serde_json = "1.0.41"
serde_yaml = "0.8.11"
serde = "1.0.101"
serde_derive = "1.0.101"
failure = "0.1.6"
log = "0.4.8"
env_logger = "0.7.1"
regex = "1.3"
lazy_static = "1.4"
url = "2.1.0"
dirs = "2.0.2"
base64 = "0.11.0"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
urlencoding = "1.0.0"
prometheus = "0.7.0"


[dev-dependencies]
serde_derive = "1.0.101"
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
env_logger = "*"

[features]
default = []
testkit = []

[[test]]
name = "integration_tests"
required-features = ["testkit"]
