[package]
name = "roperator"
version = "0.2.0"
authors = ["pfried <philipsfried@gmail.com>"]
edition = "2018"
description = "Easily create Kubernetes Operators with Rust"
repository = "https://github.com/psFried/roperator"
documentation = "https://docs.rs/roperator"
readme = "README.md"
keywords = ["kubernetes", "k8s", "operator"]
categories = ["api-bindings", "config"]
license = "MIT OR Apache-2.0"
exclude = [ "docs/" ]

[badges.maintenance]
status = "actively-developed"

[dependencies]
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"]}
http = "^0.1.15"
tokio = "0.2.0-alpha.6"
tokio-executor = "0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
futures-util-preview = "=0.3.0-alpha.19"
bytes = "0.4.12"
hyper-openssl = "=0.8.0-alpha.4"
openssl = "^0.10"
serde_json = "1.0"
serde_yaml = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.8"
regex = "1.3"
lazy_static = "1.4"
url = "2.1"
dirs = "2.0"
base64 = "0.11"
urlencoding = "1.0"
prometheus = "0.7"
backoff = "0.1.6"

[dev-dependencies]
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
env_logger = "0.7.1"
chrono = "^0.4"

[features]
default = []
testkit = []
failable = []
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
test = []

[[test]]
name = "integration_tests"
required-features = ["testkit"]

[[examples]]
name = "temp-namespace"
required-features = ["failable"]
