[package]
name = "roperator"
version = "0.2.1"
authors = ["pfried <philipsfried@gmail.com>"]
edition = "2018"
description = "Easily create Kubernetes Operators with Rust"
repository = "https://github.com/psFried/roperator"
documentation = "https://docs.rs/roperator"
readme = "README.md"
keywords = ["kubernetes", "k8s", "operator"]
categories = ["api-bindings", "config"]
license = "MIT OR Apache-2.0"
exclude = [ "docs/" ]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
features = [ "failable", "testkit" ]

[dependencies]
hyper = { version = "0.14", features = ["client", "server", "http1", "stream"]}
http = "0.2"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "io-util", "time", "net"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
futures = { version = "0.3", features = ["compat"] }
futures-util = "0.3"
bytes = "1"
hyper-openssl = "0.9"
openssl = "^0.10"
serde_json = "1.0"
serde_yaml = "0.8"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.8"
regex = "1.3"
lazy_static = "1.4"
url = "2.1"
dirs = "2.0"
base64 = "0.12"
urlencoding = "1.0"
prometheus = "0.8"
backoff = "0.1.6"
anyhow = "1.0"

[dev-dependencies]
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
env_logger = "0.7.1"
chrono = "^0.4"
protobuf = "=2.14.0"

[features]
default = []
testkit = []
failable = []
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
test = []

[[test]]
name = "integration_tests"
required-features = ["testkit"]

[[example]]
name = "temp-namespace"
required-features = ["failable"]
